--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.2",
+    "@brainhubeu/react-carousel": "^2.0.4",
+    "@date-io/date-fns": "^1.3.5",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
+    "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apisauce": "^2.1.1",
+    "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
+    "joi-browser": "^13.4.0",
+    "lottie-react": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-meta-tags": "^1.0.1",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweet-alert": "^2.0.5",
+    "sweetalert2": "^11.0.18",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
